Много изменений в фронтенде. Верстка почти сделана

--- a/frontend/docs/Страницы.md
+++ b/frontend/docs/Страницы.md
@@ -15,6 +15,7 @@
 элемент чата => переход на стр. переписки
 кнопка "написать сообщение" => стр. нового сообщения
 кнопка "создать чат" => стр. создания чата
+аватарка профиля => окно профиля
 
 Если нету чатов => текст "Пусто"
 
