--- a/frontend/docs/Техническое задание.md
+++ b/frontend/docs/Техническое задание.md
@@ -1,12 +1,11 @@
 Задача: реализовать клиентскую часть мессенджера
-Срок: с 15.09 по 30.09 включительно (16 дней)
+Срок: 29.09 -> 10.10 (12 дней)
 #### Разработка делится на 4 основных этапа:
-- [ ] Дизайн **(уже сделано)**
-- [ ] Верстка **(8 дней)**
-- [ ] Реализация функционала без связи с backend (запрашиваемые данные заменяются подставными значениями) **(6 дней)**
-- [ ] Наладить связь с backend **(2 дня)**
+- [ ] Верстка **(4 дней)**
+- [ ] Реализация функционала без связи с backend (запрашиваемые данные заменяются подставными значениями) **(4 дней)**
+- [ ] Наладить связь с backend **(4 дня)**
 
-#### Сайт должен содержать 6 страниц:
+#### Сайт должен содержать 9 страниц:
 1. Блок аутентификации
 	1. Авторизация
 	2. Регистрация
@@ -15,7 +14,6 @@
 2. Пользовательская часть
 	1. Главная страница (список чатов)
 	2. Страница переписки
-
-#### Подробнее про страницы
-
-##### 
+	3. Стр. поиска пользователя
+	4. Стр. отправки сообщения
+	5. Стр. приглашения
